# kiln

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  codecov.yml  pyproject.toml  release-please-config.json  renovate.json
.claude/: settings.json
.github/: settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  lint.yml  pr-title.yml  publish.yml  release.yml  test.yml
docs/: api.rst  architecture.rst  comms.rst  conf.py  development.rst  extending.rst  getting_started.rst  index.rst  pgqueuer.rst  playground.rst  reference.rst  telemetry.md  telemetry.rst  usage.rst
docs/_templates/: redirect.html  versioning.html
docs/design/: filtering.md
playground/: alembic.ini  example.jsonnet  justfile  main.py  run_example.py
playground/alembic/: env.py  script.py.mako
playground/app/: __init__.py  models.py
playground/blog/: __init__.py  actions.py
playground/blog/db/views/: published_articles.py
playground/blog/models/: __init__.py  article.py  author.py  tag.py
playground/db/: __init__.py  base.py
playground/examples/: blog.jsonnet  inventory.jsonnet  kitchen_sink.jsonnet  project.jsonnet  with_telemetry.jsonnet
playground/inventory/: __init__.py  actions.py  guards.py  models.py  queries.py  serializers.py
playground/kitchen/: __init__.py  models.py
playground/myapp/: __init__.py  auth.py  revocation.py
scripts/: capture_golden.py  check_control_blank_lines.py  generate_pgcraft_stdlib.py
scripts/docs/: build_versioned_docs.py
src/be/: target.py
src/be/config/: __init__.py  schema.py
src/be/jsonnet/: fields.libsonnet
src/be/jsonnet/auth/: jwt.libsonnet
src/be/jsonnet/comms/: comms.libsonnet
src/be/jsonnet/db/: databases.libsonnet
src/be/jsonnet/operations/: list.libsonnet
src/be/jsonnet/rate_limit/: rate_limit.libsonnet
src/be/jsonnet/resources/: presets.libsonnet
src/be/jsonnet/telemetry/: telemetry.libsonnet
src/be/operations/: __init__.py  _introspect.py  _naming.py  _overrides.py  action.py  actions.py  auth.py  comms_scaffold.py  create.py  delete.py  filter.py  get.py  link_schema.py  links.py  list.py  order.py  paginate.py  permissions.py  rate_limit.py  rate_limit_scaffold.py  renderers.py  representations.py  resource_registry.py  routing.py  saved_views.py  scaffold.py  searchable.py  telemetry.py  tracing.py  types.py  update.py
src/be/templates/fastapi/: actions.py.j2  handler_default.py.j2  links.py.j2  project_router.py.j2  route.py.j2  router.py.j2  schema_outer.py.j2  serializer_fn.py.j2  serializer_outer.py.j2  test_outer.py.j2
src/be/templates/init/: auth_router.py.j2  comms_setup.py.j2  db_session.py.j2  rate_limit_setup.py.j2  telemetry_setup.py.j2
src/be_root/: __init__.py  config.py  operations.py  target.py
src/be_root/templates/: alembic.ini.j2  auth.py.j2  comms.py.j2  gitignore.j2  justfile.j2  main.py.j2  notification_preference_model.py.j2  pyproject.toml.j2
src/fe/: __init__.py  config.py  operations.py  target.py
src/fe/config/: __init__.py  schema.py
src/fe/jsonnet/: main.libsonnet  nav.libsonnet
src/fe/operations/: __init__.py  auth.py  openapi_ts.py  resource_action.py  resource_detail.py  resource_form.py  resource_list.py  routes.py  scaffold.py
src/fe/templates/: openapi-ts.config.ts.j2
src/fe_root/: __init__.py  config.py  operations.py  target.py
src/fe_root/templates/: gitignore.j2  index.html.j2  justfile.j2  package.json.j2  tsconfig.json.j2  vite.config.ts.j2
src/foundry/: __init__.py  _python_imports.py  assembler.py  cascade.py  cli.py  config.py  engine.py  env.py  errors.py  imports.py  jsonnet.py  naming.py  operation.py  output.py  outputs.py  pipeline.py  render.py  scope.py  spec.py  store.py  target.py
src/foundry/formatters/: __init__.py  python.py
src/foundry/templates/: _macros.j2
src/ingot/: __init__.py  actions.py  auth.py  comms.py  documents.py  files.py  filter_values.py  filters.py  links.py  ordering.py  pagination.py  queue.py  rate_limit.py  resource_registry.py  responses.py  saved_views.py  telemetry.py  utils.py  values_table.py
src/kiln/: _helpers.py  cli.py  errors.py  target.py
src/kiln/config/: __init__.py  loader.py  schema.py
src/kiln/generators/: __init__.py  _env.py  _helpers.py  base.py  generate.py  registry.py
src/kiln/jsonnet/: fields.libsonnet
src/kiln/operations/: __init__.py  _introspect.py  _list_config.py  _list_extension.py  _render.py  _shared.py  action.py  auth.py  create.py  crud.py  delete.py  filter.py  get.py  infra.py  list.py  order.py  paginate.py  renderers.py  routing.py  scaffold.py  telemetry.py  tracing.py  types.py  update.py
src/kiln/renderers/: __init__.py  assembler.py  fastapi.py  generate.py
src/kiln/templates/: _macros.j2
src/kiln_core/: __init__.py  output.py  spec.py
src/kiln_root/: config.py  operations.py  target.py
src/kiln_root/templates/: auth.py.j2  gitignore.j2  justfile.j2  main.py.j2  pyproject.toml.j2
tests/integration/: test_action_framework.py  test_filtering.py  test_link_search_views.py  test_pre_post_hooks.py  test_representations.py
tests/unit/: _action_stubs.py  test_be_root.py  test_cascade.py  test_cli.py  test_comms.py  test_config.py  test_core.py  test_engine.py  test_fe.py  test_fe_auth.py  test_fe_config.py  test_fe_resource_action.py  test_fe_resource_detail.py  test_fe_resource_form.py  test_fe_resource_list.py  test_fe_root.py  test_fe_routes.py  test_fe_scaffold.py  test_generated_lint.py  test_generators.py  test_golden.py  test_helpers.py  test_ingot_actions.py  test_ingot_auth.py  test_ingot_comms.py  test_ingot_documents.py  test_ingot_files.py  test_ingot_filter_values.py  test_ingot_filters.py  test_ingot_ordering.py  test_ingot_pagination.py  test_ingot_queue.py  test_ingot_resource_registry.py  test_ingot_responses.py  test_ingot_saved_views.py  test_ingot_telemetry.py  test_ingot_utils.py  test_ingot_values_table.py  test_introspect.py  test_kiln_root.py  (+11 more)
tests/unit/golden/: utils.py
(+130 files in other folders)
