[project]
name = "kiln-generator"
version = "0.7.3"
description = "CLI for autogenerating files from templates"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rodda John", email = "roddarjohn@protonmail.com" }]
requires-python = ">=3.12"
keywords = ["cli", "templates", "code-generation", "scaffolding"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.24.1",
  "pydantic>=2.0",
  "jsonnet>=0.21.0",
  "jinja2>=3.0",
  "fastapi>=0.115",
  "sqlalchemy[asyncio]>=2.0",
  "pyjwt>=2.0",
]

[project.optional-dependencies]
# ``kiln-generator[opentelemetry]`` installs the OTel runtime
# packages that ``ingot.telemetry`` imports.  Generated apps with
# telemetry on need this set; apps without telemetry never import
# ``ingot.telemetry`` and don't need it.  Pinned as a coherent
# release pair -- bump core (1.x) and instrumentation (0.x.b)
# packages in lockstep when upgrading.
opentelemetry = [
  "opentelemetry-api==1.29.0",
  "opentelemetry-sdk==1.29.0",
  "opentelemetry-exporter-otlp-proto-http==1.29.0",
  "opentelemetry-instrumentation-fastapi==0.50b0",
  "opentelemetry-instrumentation-sqlalchemy==0.50b0",
  "opentelemetry-instrumentation-requests==0.50b0",
]
# ``kiln-generator[opentelemetry-grpc]`` is additive on top of the
# ``opentelemetry`` extra: it adds the gRPC OTLP exporter that the
# generated ``init_telemetry`` reaches for when ``exporter:
# 'otlp_grpc'``.  Split out because the gRPC stack pulls in
# protobuf and grpc-io, which together are roughly an order of
# magnitude heavier than the HTTP transport and aren't useful to
# consumers staying on OTLP/HTTP.  Install both extras together::
#
#     pip install 'kiln-generator[opentelemetry,opentelemetry-grpc]'
opentelemetry-grpc = ["opentelemetry-exporter-otlp-proto-grpc==1.29.0"]
files = ["boto3>=1.34"]

[project.urls]
Homepage = "https://github.com/roddarjohn/kiln"
Documentation = "https://roddarjohn.github.io/kiln/"
Repository = "https://github.com/roddarjohn/kiln"
Changelog = "https://github.com/roddarjohn/kiln/blob/main/CHANGELOG.md"
Issues = "https://github.com/roddarjohn/kiln/issues"

[project.scripts]
foundry = "foundry.cli:cli_main"

[project.entry-points."foundry.import_formatters"]
python = "foundry.formatters.python:format_python"

[project.entry-points."foundry.targets"]
kiln = "kiln.target:target"

[project.entry-points."foundry.operations"]
scaffold = "kiln.operations.scaffold:Scaffold"
auth_scaffold = "kiln.operations.scaffold:AuthScaffold"
telemetry_scaffold = "kiln.operations.telemetry:TelemetryScaffold"
get = "kiln.operations.get:Get"
list = "kiln.operations.list:List"
filter = "kiln.operations.filter:Filter"
order = "kiln.operations.order:Order"
paginate = "kiln.operations.paginate:Paginate"
create = "kiln.operations.create:Create"
update = "kiln.operations.update:Update"
delete = "kiln.operations.delete:Delete"
action = "kiln.operations.action:Action"
auth = "kiln.operations.auth:Auth"
tracing = "kiln.operations.tracing:Tracing"
router = "kiln.operations.routing:Router"
project_router = "kiln.operations.routing:ProjectRouter"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["kiln", "foundry", "ingot"]


[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=1.3.0",
  "coverage[toml]>=7.0",
  "tox>=4.49.1",
  "tox-uv>=1.33.2",
  # OTel mirrored from the ``opentelemetry`` /
  # ``opentelemetry-grpc`` extras so the dev test suite can import
  # ``ingot.telemetry`` and exercise the gRPC exporter path.  Keep
  # the pins in lockstep with the matching extras above.
  "opentelemetry-api==1.29.0",
  "opentelemetry-sdk==1.29.0",
  "opentelemetry-exporter-otlp-proto-http==1.29.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.29.0",
  "opentelemetry-instrumentation-fastapi==0.50b0",
  "opentelemetry-instrumentation-sqlalchemy==0.50b0",
  "opentelemetry-instrumentation-requests==0.50b0",
  # Ingot's files extra ships boto3 as optional; CI installs it
  # here so the full test suite can run without an explicit --extra.
  "boto3>=1.34",
]
playground = [
  "fastapi>=0.115",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "pgcraft",
  "uvicorn[standard]>=0.30",
  "pyjwt>=2.0",
  "alembic>=1.18.4",
  "httpx>=0.28.1",
  "pytest-asyncio>=1.3.0",
]
docs = [
  "myst-parser>=4.0",
  "sphinx>=7.0",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-autodoc-typehints>=3.0.1",
  "sphinx-copybutton>=0.5.2",
]
lint = ["ruff>=0.15.5", "types-jsonnet>=0.22.0.20260408", "zuban>=0.7.0"]

[tool.ruff]
line-length = 80
exclude = ["docs", "playground"]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Conflicts with formatter
  "COM812",
  "ISC001",
  # Docstring convention (use D211 + D212)
  "D203",
  "D213",
  # Only enforce docstrings on public classes, functions, and methods
  "D100", # missing docstring in public module
  "D104", # missing docstring in public package
  # Not applicable to this project
  "AIR",
  "DJ",
  "FAST",
  "NPY",
  "PD",
  "INT",
  "CPY",
]

[tool.ruff.lint.per-file-ignores]
"src/ingot/**" = [
  "ANN401",  # Any is appropriate for reflection-based SQLAlchemy helpers
  "PLR0913", # pagination helpers genuinely take many parameters
]
"scripts/**" = [
  "INP001",  # scripts/ doesn't need __init__.py
  "T201",    # print is fine in scripts
  "S603",    # subprocess calls use trusted, hardcoded commands
  "S607",    # partial paths (git, uv) are intentional
  "PLW1510", # check=False is intentional for fallible builds
  "PLC0415", # local imports acceptable in discovery functions
  "S112",    # try/except/continue is intentional for plugin discovery
  "ANN401",  # Any is acceptable for Python value serialisation helpers
  "PLR0911", # multiple returns fine in type-dispatch helpers
  "E402",    # sys.path tweaks must precede imports in some scripts
  "D103",    # top-level main() helpers don't need docstrings
]
"tests/**" = [
  "S101",    # assert is fine in tests
  "ANN",     # no annotations required in tests
  "D",       # no docstrings required in tests
  "PLR2004", # magic numbers are fine in test assertions
  "PLC0415", # local imports acceptable in test methods
  "RUF059",  # unpacked dummy variables are fine in tests
  "SLF001",  # testing private methods is fine in tests
  "S603",    # subprocess calls use trusted, hardcoded commands
  "S607",    # partial paths (uv, ruff) are intentional
]

[tool.mypy]
python_version = "3.12"
files = ["src"]

[tool.coverage.run]
source = ["kiln", "foundry", "ingot"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
addopts = ""
asyncio_mode = "auto"

[tool.tox]
requires = ["tox-uv>=1"]
env_list = ["3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
dependency_groups = ["dev"]
commands = [["pytest", "{posargs:}"]]
